Fix modal causing horizontal scrolling

--- a/src/components/DinerButton/DinerButton.module.css
+++ b/src/components/DinerButton/DinerButton.module.css
@@ -8,7 +8,7 @@
   margin: 10px 15px;
   cursor: pointer;
 
-  transition: padding 0.3s ease;
+  transition: padding 0.1s ease;
 }
 
 .dinerButton:hover {
