--- a/src/layout/Layout.module.css
+++ b/src/layout/Layout.module.css
@@ -1,6 +1,6 @@
 .main {
   margin: 3rem auto;
-  width: 90%;
+  width: 80vw;
   max-width: 40rem;
 
   display: flex;
