--- a/src/modals/Modal.module.css
+++ b/src/modals/Modal.module.css
@@ -1,25 +1,15 @@
 .modal {
-  position: absolute;
+  position: fixed;
   z-index: 1;
   width: 100vw;
-  max-width: 200vw;
   height: 100vh;
   display: flex;
-  /* transform: translate(-45px); */
   opacity: 1;
-
   transition: opacity 0.3s ease;
-  transition: z-index 0.1s ease;
-  transition-delay: 0s, 3s;
-  /* background-color: rgba(0, 0, 0, 0.372); */
+  transition: z-index 0.3s;
 }
 
 .modal.hidden {
-  /* max-width: 0px; */
+  position: fixed;
   z-index: -1;
-  /* opacity: 0; */
-}
-
-.spacer {
-  flex: 1;
 }
